; ModuleID = '/home/carl/AnghaBench/kphp-kdb/image/extr_image-data.c_load_image.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/image/extr_image-data.c_load_image.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.forth_stack = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"load_image\0A\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"read_image 1st\00", align 1
@FORTH_FAIL = common dso_local global i8* null, align 8
@NEXT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8**, %struct.forth_stack*)* @load_image to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @load_image(i8** %0, %struct.forth_stack* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca %struct.forth_stack*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i8** %0, i8*** %4, align 8
  store %struct.forth_stack* %1, %struct.forth_stack** %5, align 8
  %9 = call i32 @vkprintf(i32 3, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %10 = load %struct.forth_stack*, %struct.forth_stack** %5, align 8
  %11 = getelementptr inbounds %struct.forth_stack, %struct.forth_stack* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* %7, align 4
  %13 = load %struct.forth_stack*, %struct.forth_stack** %5, align 8
  %14 = call i32 @pop_str(%struct.forth_stack* %13, i8** %6, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %21, label %16

16:                                               ; preds = %2
  %17 = load i32, i32* %7, align 4
  %18 = load %struct.forth_stack*, %struct.forth_stack** %5, align 8
  %19 = getelementptr inbounds %struct.forth_stack, %struct.forth_stack* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  %20 = load i8*, i8** @FORTH_FAIL, align 8
  store i8* %20, i8** %3, align 8
  br label %44

21:                                               ; preds = %2
  %22 = load %struct.forth_stack*, %struct.forth_stack** %5, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = call i32* @gm_read_image(%struct.forth_stack* %22, i8* %23)
  store i32* %24, i32** %8, align 8
  %25 = load i32*, i32** %8, align 8
  %26 = icmp eq i32* %25, null
  br i1 %26, label %27, label %32

27:                                               ; preds = %21
  %28 = load i32, i32* %7, align 4
  %29 = load %struct.forth_stack*, %struct.forth_stack** %5, align 8
  %30 = getelementptr inbounds %struct.forth_stack, %struct.forth_stack* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 4
  %31 = load i8*, i8** @FORTH_FAIL, align 8
  store i8* %31, i8** %3, align 8
  br label %44

32:                                               ; preds = %21
  %33 = load %struct.forth_stack*, %struct.forth_stack** %5, align 8
  %34 = load %struct.forth_stack*, %struct.forth_stack** %5, align 8
  %35 = getelementptr inbounds %struct.forth_stack, %struct.forth_stack* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = add nsw i32 %36, 1
  %38 = load i32, i32* %7, align 4
  %39 = call i32 @free_stack(%struct.forth_stack* %33, i32 %37, i32 %38)
  %40 = load %struct.forth_stack*, %struct.forth_stack** %5, align 8
  %41 = load i32*, i32** %8, align 8
  %42 = call i32 @push_image(%struct.forth_stack* %40, i32* %41)
  %43 = load i32, i32* @NEXT, align 4
  br label %44

44:                                               ; preds = %32, %27, %16
  %45 = load i8*, i8** %3, align 8
  ret i8* %45
}

declare dso_local i32 @vkprintf(i32, i8*) #1

declare dso_local i32 @pop_str(%struct.forth_stack*, i8**, i8*) #1

declare dso_local i32* @gm_read_image(%struct.forth_stack*, i8*) #1

declare dso_local i32 @free_stack(%struct.forth_stack*, i32, i32) #1

declare dso_local i32 @push_image(%struct.forth_stack*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
